--- a/src/main/resources/oiyokan/oiyokan-settings-PostgreSQL.json
+++ b/src/main/resources/oiyokan/oiyokan-settings-PostgreSQL.json
@@ -2063,7 +2063,7 @@
             "edmType": "Edm.Decimal",
             "jdbcType": "Types.NUMERIC",
             "dbType": "numeric",
-            "precision": 6,
+            "precision": 12,
             "scale": 2,
             "nullable": true
           }
@@ -2107,6 +2107,8 @@
             "edmType": "Edm.Decimal",
             "jdbcType": "Types.NUMERIC",
             "dbType": "numeric",
+            "precision": 12,
+            "scale": 2,
             "nullable": true
           }
         ]
