--- a/src/main/resources/oiyokan/oiyokan-settings-Template.json
+++ b/src/main/resources/oiyokan/oiyokan-settings-Template.json
@@ -9,7 +9,7 @@
       "jdbcDriver": "org.h2.Driver",
       "jdbcUrl": "jdbc:h2:mem:oiyokan;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=FALSE;MODE=MSSQLServer",
       "jdbcUser": "sa",
-      "jdbcPass": ""
+      "jdbcPassPlain": ""
     },
     {
       "name": "oiyoUnitTestDb",
@@ -18,7 +18,7 @@
       "jdbcDriver": "org.h2.Driver",
       "jdbcUrl": "jdbc:h2:file:./src/main/resources/db/oiyokan-internal;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=FALSE;MODE=MSSQLServer",
       "jdbcUser": "sa",
-      "jdbcPass": ""
+      "jdbcPassPlain": ""
     },
     {
       "name": "postgres1",
@@ -27,7 +27,7 @@
       "jdbcDriver": "org.postgresql.Driver",
       "jdbcUrl": "jdbc:postgresql://localhost:5432/dvdrental",
       "jdbcUser": "",
-      "jdbcPass": ""
+      "jdbcPassPlain": ""
     },
     {
       "name": "mysql1",
@@ -36,7 +36,7 @@
       "jdbcDriver": "com.mysql.jdbc.Driver",
       "jdbcUrl": "jdbc:mysql://localhost/mysql?useUnicode=true&characterEncoding=UTF-8&characterSetResults=UTF-8&useCursorFetch=true&defaultFetchSize=128&useServerPrepStmts=true&emulateUnsupportedPstmts=false",
       "jdbcUser": "root",
-      "jdbcPass": "passwd123"
+      "jdbcPassPlain": "passwd123"
     },
     {
       "name": "mysql2",
@@ -45,7 +45,7 @@
       "jdbcDriver": "com.mysql.jdbc.Driver",
       "jdbcUrl": "jdbc:mysql://localhost/sakila?useUnicode=true&characterEncoding=UTF-8&characterSetResults=UTF-8&useCursorFetch=true&defaultFetchSize=128&useServerPrepStmts=true&emulateUnsupportedPstmts=false",
       "jdbcUser": "root",
-      "jdbcPass": "passwd123"
+      "jdbcPassPlain": "passwd123"
     },
     {
       "name": "mssql1",
@@ -54,7 +54,7 @@
       "jdbcDriver": "com.microsoft.sqlserver.jdbc.SQLServerDriver",
       "jdbcUrl": "jdbc:sqlserver://localhost\\SQLExpress",
       "jdbcUser": "sa",
-      "jdbcPass": "passwd123"
+      "jdbcPassPlain": "passwd123"
     },
     {
       "name": "oracle1",
@@ -63,7 +63,7 @@
       "jdbcDriver": "oracle.jdbc.driver.OracleDriver",
       "jdbcUrl": "jdbc:oracle:thin:@10.0.2.15:1521/xepdb1",
       "jdbcUser": "orauser",
-      "jdbcPass": "passwd123"
+      "jdbcPassPlain": "passwd123"
     }
   ],
   "entitySet": [
