--- a/src/main/resources/oiyokan/oiyokan-settings-ORCL18.json
+++ b/src/main/resources/oiyokan/oiyokan-settings-ORCL18.json
@@ -743,7 +743,7 @@
     {
       "name": "ODataTest8",
       "description": "Description.",
-      "dbSettingName": "oiyoUnitTestDb",
+      "dbSettingName": "oracle1",
       "canCreate": true,
       "canRead": true,
       "canUpdate": true,
@@ -778,7 +778,7 @@
     {
       "name": "ODataTest8Sub",
       "description": "Description.",
-      "dbSettingName": "oiyoUnitTestDb",
+      "dbSettingName": "oracle1",
       "canCreate": true,
       "canRead": true,
       "canUpdate": true,
@@ -822,7 +822,7 @@
     {
       "name": "ODataTest8SubSub",
       "description": "Description.",
-      "dbSettingName": "oiyoUnitTestDb",
+      "dbSettingName": "oracle1",
       "canCreate": true,
       "canRead": true,
       "canUpdate": true,
@@ -875,7 +875,7 @@
     {
       "name": "ODataTest9",
       "description": "Description.",
-      "dbSettingName": "oiyoUnitTestDb",
+      "dbSettingName": "oracle1",
       "canCreate": true,
       "canRead": true,
       "canUpdate": true,
