--- a/src/main/resources/oiyokan/oiyokan-settings-ORCL18.json
+++ b/src/main/resources/oiyokan/oiyokan-settings-ORCL18.json
@@ -743,7 +743,7 @@
     {
       "name": "ODataTest8",
       "description": "Description.",
-      "dbSettingName": "oiyoUnitTestDb",
+      "dbSettingName": "oracle1",
       "canCreate": true,
       "canRead": true,
       "canUpdate": true,
@@ -778,7 +778,7 @@
     {
       "name": "ODataTest8Sub",
       "description": "Description.",
-      "dbSettingName": "oiyoUnitTestDb",
+      "dbSettingName": "oracle1",
       "canCreate": true,
       "canRead": true,
       "canUpdate": true,
@@ -822,7 +822,7 @@
     {
       "name": "ODataTest8SubSub",
       "description": "Description.",
-      "dbSettingName": "oiyoUnitTestDb",
+      "dbSettingName": "oracle1",
       "canCreate": true,
       "canRead": true,
       "canUpdate": true,
@@ -868,6 +868,46 @@
             "nullable": true,
             "maxLength": 250,
             "dbDefault": "'Sub sub table'"
+          }
+        ]
+      }
+    },
+    {
+      "name": "ODataTest9",
+      "description": "Description.",
+      "dbSettingName": "oracle1",
+      "canCreate": true,
+      "canRead": true,
+      "canUpdate": true,
+      "canDelete": true,
+      "omitCountAll": false,
+      "jdbcStmtTimeout": 30,
+      "entityType": {
+        "name": "ODataTest9",
+        "dbName": "ODataTest9",
+        "keyName": [],
+        "property": [
+          {
+            "name": "Name",
+            "dbName": "Name",
+            "edmType": "Edm.String",
+            "jdbcType": "Types.VARCHAR",
+            "dbType": "VARCHAR",
+            "nullable": true,
+            "maxLength": 80,
+            "dbDefault": "'Ubnormal test case. Without Primary Key.'",
+            "filterTreatNullAsBlank": true
+          },
+          {
+            "name": "Description",
+            "dbName": "Description",
+            "edmType": "Edm.String",
+            "jdbcType": "Types.VARCHAR",
+            "dbType": "VARCHAR",
+            "nullable": true,
+            "maxLength": 250,
+            "dbDefault": "'Ubnormal test case. Without Primary Key.'",
+            "filterTreatNullAsBlank": true
           }
         ]
       }
