--- a/pom.xml
+++ b/pom.xml
@@ -12,10 +12,10 @@
 
 	<groupId>jp.igapyon.oiyokan</groupId>
 	<artifactId>oiyokan-unittest</artifactId>
-	<version>1.14.20210510a</version>
+	<version>1.14.20210519b</version>
 	<name>oiyokan-unittest</name>
 	<description>Oiyokan is a simple OData v4 Server. (based on Apache
-		Olingo / Spring Boot / h2 database)</description>
+		Olingo / h2 database)</description>
 	<url>https://github.com/igapyon/oiyokan</url>
 
 	<!-- see: https://maven.apache.org/guides/mini/guide-central-repository-upload.html -->
