--- a/src/main/resources/oiyokan/oiyokan-settings-MySQL.json
+++ b/src/main/resources/oiyokan/oiyokan-settings-MySQL.json
@@ -9,7 +9,8 @@
       "jdbcDriver": "org.h2.Driver",
       "jdbcUrl": "jdbc:h2:file:./src/main/resources/db/oiyokan-internal;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=FALSE;MODE=MSSQLServer",
       "jdbcUser": "sa",
-      "jdbcPassPlain": ""
+      "jdbcPassPlain": "",
+      "transactionIsolation": "Connection.TRANSACTION_READ_COMMITTED"
     },
     {
       "name": "postgres1",
@@ -18,7 +19,8 @@
       "jdbcDriver": "org.postgresql.Driver",
       "jdbcUrl": "jdbc:postgresql://localhost:5432/dvdrental",
       "jdbcUser": "",
-      "jdbcPassPlain": ""
+      "jdbcPassPlain": "",
+      "transactionIsolation": "Connection.TRANSACTION_READ_COMMITTED"
     },
     {
       "name": "mysql1",
@@ -27,7 +29,8 @@
       "jdbcDriver": "com.mysql.jdbc.Driver",
       "jdbcUrl": "jdbc:mysql://localhost/mysql?useUnicode=true&characterEncoding=UTF-8&characterSetResults=UTF-8&useCursorFetch=true&defaultFetchSize=128&useServerPrepStmts=true&emulateUnsupportedPstmts=false",
       "jdbcUser": "root",
-      "jdbcPassPlain": "passwd123"
+      "jdbcPassPlain": "passwd123",
+      "transactionIsolation": "Connection.TRANSACTION_READ_COMMITTED"
     },
     {
       "name": "mysql2",
@@ -36,7 +39,8 @@
       "jdbcDriver": "com.mysql.jdbc.Driver",
       "jdbcUrl": "jdbc:mysql://localhost/sakila?useUnicode=true&characterEncoding=UTF-8&characterSetResults=UTF-8&useCursorFetch=true&defaultFetchSize=128&useServerPrepStmts=true&emulateUnsupportedPstmts=false",
       "jdbcUser": "root",
-      "jdbcPassPlain": "passwd123"
+      "jdbcPassPlain": "passwd123",
+      "transactionIsolation": "Connection.TRANSACTION_READ_COMMITTED"
     },
     {
       "name": "mssql1",
@@ -45,7 +49,8 @@
       "jdbcDriver": "com.microsoft.sqlserver.jdbc.SQLServerDriver",
       "jdbcUrl": "jdbc:sqlserver://localhost\\SQLExpress",
       "jdbcUser": "sa",
-      "jdbcPassPlain": "passwd123"
+      "jdbcPassPlain": "passwd123",
+      "transactionIsolation": "Connection.TRANSACTION_READ_COMMITTED"
     },
     {
       "name": "oracle1",
@@ -54,7 +59,8 @@
       "jdbcDriver": "oracle.jdbc.driver.OracleDriver",
       "jdbcUrl": "jdbc:oracle:thin:@10.0.2.15:1521/xepdb1",
       "jdbcUser": "orauser",
-      "jdbcPassPlain": "passwd123"
+      "jdbcPassPlain": "passwd123",
+      "transactionIsolation": "Connection.TRANSACTION_READ_COMMITTED"
     }
   ],
   "entitySet": [
