--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,9 @@
 
 	<groupId>jp.igapyon.oiyokan</groupId>
 	<artifactId>oiyokan-unittest</artifactId>
-	<version>1.16.20210524a</version>
+	<version>1.17.20210525a</version>
 	<name>oiyokan-unittest</name>
-	<description>Oiyokan is a simple OData v4 Server. (based on Apache
+	<description>UnitTest of Oiyokan. Oiyokan is a simple OData v4 Server. (based on Apache
 		Olingo / h2 database)</description>
 	<url>https://github.com/igapyon/oiyokan</url>
 
@@ -86,7 +86,7 @@
 		<dependency>
 			<groupId>jp.igapyon.oiyokan</groupId>
 			<artifactId>oiyokan</artifactId>
-			<version>1.16.20210525d-SNAPSHOT</version>
+			<version>1.17.20210525e</version>
 		</dependency>
 
 		<dependency>
