--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
 	<groupId>jp.igapyon.oiyokan</groupId>
 	<artifactId>oiyokan-unittest</artifactId>
-	<version>1.20.20210613a</version>
+	<version>1.20.20210620a</version>
 	<name>oiyokan-unittest</name>
 	<description>UnitTest of Oiyokan. Oiyokan is a simple OData v4 Server. (based on Apache
 		Olingo / h2 database)</description>
@@ -86,7 +86,7 @@
 		<dependency>
 			<groupId>jp.igapyon.oiyokan</groupId>
 			<artifactId>oiyokan</artifactId>
-			<version>1.20.20210613a</version>
+			<version>1.20.20210620a-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
